--- a/smartcontract/package.json
+++ b/smartcontract/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.35",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17"
   }
